@@ -43,6 +43,7 @@ DETAILED CHANGES:
 	- FIXED: Added rlDisableShader for SetShaderValue* functions to prevent bugs.
 	Should be removed if added back in raylib.
 	- ADDED: SDL3 Events.
+	- ADDED: Fast tilemap example.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
